# django-json-kv-widget

./: .editorconfig  README.rst  setup.cfg  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
src/django_json_kv_widget/: widgets.py
src/django_json_kv_widget/static/js/json_kv_widget/: json_kv_widget.js  jstree.js
src/django_json_kv_widget/static/js/json_kv_widget/jstree/: jstree.js
src/django_json_kv_widget/static/js/json_kv_widget/themes/default/: style.css
src/django_json_kv_widget/templates/json_pairs_widget/: json_input_widget.html
