[metadata]
name = django-json-kv-widget
author = Kyle Stapp
author_email = kyle.stapp@redlattice.com
description = A django widget for rendering a nice GUI of key:value pairs with support for grouping/foldering from a json field
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url =
project_urls =
#    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation =
    Source Code =
license = Apache-2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python 3
keywords =
    setup
    distutils


[options]
zip_safe = False
package_dir =
  '' = src/
packages =
  django_json_kv_widget
include_package_data = True
setup_requires =
  setuptools_scm

[tool:pytest]
testpaths =
  tests

[aliases]
test=pytest

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[mypy]
python_version = 3.6
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True
